Freedom Sanbox Ant Deploy/src/objects/Analysis_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Analysis__c</fullName>
        <label>Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Question</label>
        <referenceTo>Question_Bank_List__c</referenceTo>
        <relationshipName>Analysis_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>X-Ray Analysis</label>
    <nameField>
        <label>X-Ray Analysis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>X-Ray Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>